--- a/package/crds/event.mongodbatlas.jet.crossplane.io_triggers.yaml
+++ b/package/crds/event.mongodbatlas.jet.crossplane.io_triggers.yaml
@@ -108,12 +108,15 @@ spec:
                     type: array
                   functionId:
                     type: string
+                  name:
+                    type: string
                   projectId:
                     type: string
                   type:
                     type: string
                 required:
                 - appId
+                - name
                 - projectId
                 - type
                 type: object
