--- a/package/crds/search.mongodbatlas.jet.crossplane.io_indices.yaml
+++ b/package/crds/search.mongodbatlas.jet.crossplane.io_indices.yaml
@@ -76,6 +76,8 @@ spec:
                     type: boolean
                   mappingsFields:
                     type: string
+                  name:
+                    type: string
                   projectId:
                     type: string
                   searchAnalyzer:
@@ -102,6 +104,7 @@ spec:
                 - clusterName
                 - collectionName
                 - database
+                - name
                 - projectId
                 type: object
               providerConfigRef:
