--- a/package/crds/cloud.mongodbatlas.jet.crossplane.io_providersnapshotbackuppolicies.yaml
+++ b/package/crds/cloud.mongodbatlas.jet.crossplane.io_providersnapshotbackuppolicies.yaml
@@ -101,6 +101,29 @@ spec:
                     type: array
                   projectId:
                     type: string
+                  projectIdRef:
+                    description: A Reference to a named object.
+                    properties:
+                      name:
+                        description: Name of the referenced object.
+                        type: string
+                    required:
+                    - name
+                    type: object
+                  projectIdSelector:
+                    description: A Selector selects an object.
+                    properties:
+                      matchControllerRef:
+                        description: MatchControllerRef ensures an object with the
+                          same controller reference as the selecting object is selected.
+                        type: boolean
+                      matchLabels:
+                        additionalProperties:
+                          type: string
+                        description: MatchLabels ensures an object with matching labels
+                          is selected.
+                        type: object
+                    type: object
                   referenceHourOfDay:
                     format: int64
                     type: integer
@@ -115,7 +138,6 @@ spec:
                 required:
                 - clusterName
                 - policies
-                - projectId
                 type: object
               providerConfigRef:
                 default:
