--- a/package/crds/database.mongodbatlas.jet.crossplane.io_users.yaml
+++ b/package/crds/database.mongodbatlas.jet.crossplane.io_users.yaml
@@ -99,6 +99,29 @@ spec:
                     type: object
                   projectId:
                     type: string
+                  projectIdRef:
+                    description: A Reference to a named object.
+                    properties:
+                      name:
+                        description: Name of the referenced object.
+                        type: string
+                    required:
+                    - name
+                    type: object
+                  projectIdSelector:
+                    description: A Selector selects an object.
+                    properties:
+                      matchControllerRef:
+                        description: MatchControllerRef ensures an object with the
+                          same controller reference as the selecting object is selected.
+                        type: boolean
+                      matchLabels:
+                        additionalProperties:
+                          type: string
+                        description: MatchLabels ensures an object with matching labels
+                          is selected.
+                        type: object
+                    type: object
                   roles:
                     items:
                       properties:
@@ -124,7 +147,6 @@ spec:
                   x509Type:
                     type: string
                 required:
-                - projectId
                 - roles
                 - username
                 type: object
