--- a/package/crds/ldap.mongodbatlas.jet.crossplane.io_configurations.yaml
+++ b/package/crds/ldap.mongodbatlas.jet.crossplane.io_configurations.yaml
@@ -97,6 +97,29 @@ spec:
                     type: integer
                   projectId:
                     type: string
+                  projectIdRef:
+                    description: A Reference to a named object.
+                    properties:
+                      name:
+                        description: Name of the referenced object.
+                        type: string
+                    required:
+                    - name
+                    type: object
+                  projectIdSelector:
+                    description: A Selector selects an object.
+                    properties:
+                      matchControllerRef:
+                        description: MatchControllerRef ensures an object with the
+                          same controller reference as the selecting object is selected.
+                        type: boolean
+                      matchLabels:
+                        additionalProperties:
+                          type: string
+                        description: MatchLabels ensures an object with matching labels
+                          is selected.
+                        type: object
+                    type: object
                   userToDnMapping:
                     items:
                       properties:
@@ -113,7 +136,6 @@ spec:
                 - bindPasswordSecretRef
                 - bindUsername
                 - hostname
-                - projectId
                 type: object
               providerConfigRef:
                 default:
