--- a/package/crds/network.mongodbatlas.jet.crossplane.io_containers.yaml
+++ b/package/crds/network.mongodbatlas.jet.crossplane.io_containers.yaml
@@ -66,6 +66,29 @@ spec:
                     type: string
                   projectId:
                     type: string
+                  projectIdRef:
+                    description: A Reference to a named object.
+                    properties:
+                      name:
+                        description: Name of the referenced object.
+                        type: string
+                    required:
+                    - name
+                    type: object
+                  projectIdSelector:
+                    description: A Selector selects an object.
+                    properties:
+                      matchControllerRef:
+                        description: MatchControllerRef ensures an object with the
+                          same controller reference as the selecting object is selected.
+                        type: boolean
+                      matchLabels:
+                        additionalProperties:
+                          type: string
+                        description: MatchLabels ensures an object with matching labels
+                          is selected.
+                        type: object
+                    type: object
                   providerName:
                     type: string
                   region:
@@ -78,7 +101,6 @@ spec:
                     type: array
                 required:
                 - atlasCidrBlock
-                - projectId
                 type: object
               providerConfigRef:
                 default:
