--- a/package/crds/online.mongodbatlas.jet.crossplane.io_archives.yaml
+++ b/package/crds/online.mongodbatlas.jet.crossplane.io_archives.yaml
@@ -103,6 +103,29 @@ spec:
                     type: boolean
                   projectId:
                     type: string
+                  projectIdRef:
+                    description: A Reference to a named object.
+                    properties:
+                      name:
+                        description: Name of the referenced object.
+                        type: string
+                    required:
+                    - name
+                    type: object
+                  projectIdSelector:
+                    description: A Selector selects an object.
+                    properties:
+                      matchControllerRef:
+                        description: MatchControllerRef ensures an object with the
+                          same controller reference as the selecting object is selected.
+                        type: boolean
+                      matchLabels:
+                        additionalProperties:
+                          type: string
+                        description: MatchLabels ensures an object with matching labels
+                          is selected.
+                        type: object
+                    type: object
                   syncCreation:
                     type: boolean
                 required:
@@ -110,7 +133,6 @@ spec:
                 - collName
                 - criteria
                 - dbName
-                - projectId
                 type: object
               providerConfigRef:
                 default:
