--- a/package/crds/privatelink.mongodbatlas.jet.crossplane.io_endpointserviceadls.yaml
+++ b/package/crds/privatelink.mongodbatlas.jet.crossplane.io_endpointserviceadls.yaml
@@ -69,13 +69,35 @@ spec:
                     type: string
                   projectId:
                     type: string
+                  projectIdRef:
+                    description: A Reference to a named object.
+                    properties:
+                      name:
+                        description: Name of the referenced object.
+                        type: string
+                    required:
+                    - name
+                    type: object
+                  projectIdSelector:
+                    description: A Selector selects an object.
+                    properties:
+                      matchControllerRef:
+                        description: MatchControllerRef ensures an object with the
+                          same controller reference as the selecting object is selected.
+                        type: boolean
+                      matchLabels:
+                        additionalProperties:
+                          type: string
+                        description: MatchLabels ensures an object with matching labels
+                          is selected.
+                        type: object
+                    type: object
                   providerName:
                     type: string
                   type:
                     type: string
                 required:
                 - endpointId
-                - projectId
                 - providerName
                 - type
                 type: object
