--- a/package/crds/project.mongodbatlas.jet.crossplane.io_invitations.yaml
+++ b/package/crds/project.mongodbatlas.jet.crossplane.io_invitations.yaml
@@ -64,6 +64,29 @@ spec:
                 properties:
                   projectId:
                     type: string
+                  projectIdRef:
+                    description: A Reference to a named object.
+                    properties:
+                      name:
+                        description: Name of the referenced object.
+                        type: string
+                    required:
+                    - name
+                    type: object
+                  projectIdSelector:
+                    description: A Selector selects an object.
+                    properties:
+                      matchControllerRef:
+                        description: MatchControllerRef ensures an object with the
+                          same controller reference as the selecting object is selected.
+                        type: boolean
+                      matchLabels:
+                        additionalProperties:
+                          type: string
+                        description: MatchLabels ensures an object with matching labels
+                          is selected.
+                        type: object
+                    type: object
                   roles:
                     items:
                       type: string
@@ -71,7 +94,6 @@ spec:
                   username:
                     type: string
                 required:
-                - projectId
                 - roles
                 - username
                 type: object
