Normalize Cluster and AdvancedCluster APIs
- Remove extraneous name attributes

Signed-off-by: Alper Rifat Ulucinar <ulucinar@users.noreply.github.com>

--- a/examples/database/user.yaml
+++ b/examples/database/user.yaml
@@ -9,7 +9,8 @@ spec:
       name: user-password
       key: password
       namespace: crossplane-system
-    projectId: <project ID>
+    projectIdRef:
+      name: example-project
     roles:
       - databaseName: admin
         roleName: readAnyDatabase
