--- a/examples/mongodbatlas/advanced-cluster-aws-freetier.yaml
+++ b/examples/mongodbatlas/advanced-cluster-aws-freetier.yaml
@@ -1,19 +1,47 @@
 apiVersion: mongodbatlas.jet.crossplane.io/v1alpha2
 kind: AdvancedCluster
 metadata:
-  name: example-advanced-cluster
+  name: advanced-cluster13
 spec:
   forProvider:
     projectIdRef:
-      name: example-project
+      name: advanced-project
     clusterType: REPLICASET
+    backupEnabled: true
+    diskSizeGb: 32
+    #versionReleaseSystem: LTS
+    mongoDbMajorVersion: "5.0"
     replicationSpecs:
     - regionConfigs:
       - electableSpecs:
-        - instanceSize: M0
-        providerName: TENANT
-        backingProviderName: AWS
-        regionName: US_EAST_1
-        priority: 1
+        - instanceSize: M10
+          nodeCount: 3
+        analyticsSpecs:
+        - instanceSize: M10
+          nodeCount: 1
+        readOnlySpecs:
+        - instanceSize: M10
+          nodeCount: 1
+        autoScaling:
+        - computeEnabled: true
+          computeMaxInstanceSize: M40
+          computeMinInstanceSize: M10
+          computeScaleDownEnabled: true
+          diskGbEnabled: false
+        providerName: AWS
+        regionName: EU_CENTRAL_1
+        priority: 7
+      - electableSpecs:
+        - instanceSize: M10
+          nodeCount: 2
+        autoScaling:
+        - computeEnabled: true
+          computeMaxInstanceSize: M40
+          computeMinInstanceSize: M10
+          computeScaleDownEnabled: true
+          diskGbEnabled: true
+        providerName: AWS
+        regionName: EU_WEST_3
+        priority: 6
   providerConfigRef:
-    name: default
+    name: mongodbtest1
