--- a/package/crds/mongodbatlas.jet.crossplane.io_providerconfigs.yaml
+++ b/package/crds/mongodbatlas.jet.crossplane.io_providerconfigs.yaml
@@ -30,7 +30,7 @@ spec:
     name: v1beta1
     schema:
       openAPIV3Schema:
-        description: A ProviderConfig configures a Template provider.
+        description: A ProviderConfig configures a MongoDBAtlas jet provider.
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
